name:          path-finding
version:       0.0.1
synopsis:      Path-finding algorithms in Haskell
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     2017 Tuura, https://github.com/tuura
homepage:      https://github.com/tuura/path-finding.git
category:      Algorithms
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/path-finding.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.BFS
    build-depends:    array == 0.5.*,
                      base >= 4.7 && < 5,
                      containers == 0.5.*
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2

executable bfs
    hs-source-dirs:   examples
    main-is:          bfs.hs
    build-depends:    array == 0.5.*,
                      base >= 4.7 && < 5,
                      containers == 0.5.*,
                      path-finding
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2
